# open-migration

./: .gitignore  CHANGELOG.md  CLAUDE_OSS_APPLICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest_temp.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: architecture.md  contributing_a_connector.md  index.html  launch_strategy.md  roadmap.md
examples/: README.md  sample_chatgpt.json  sample_claude.json
examples/demo/: index.html
open_migration/: __init__.py  __main__.py  cli.py  graph.py
open_migration/connectors/: __init__.py  auto.py  base.py  chatgpt.py  claude.py  gemini.py
open_migration/exporters/: __init__.py  html_site.py  markdown.py  obsidian.py
open_migration/web/: app.py
tests/: test_suite.py
