[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-migration"
version = "0.1.0"
description = "Export and migrate AI conversations from Claude, ChatGPT, and Gemini. Own your data."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = [
  "ai", "chatgpt", "claude", "gemini", "export", "obsidian",
  "migration", "data-portability", "knowledge-base", "markdown"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero required dependencies — the core CLI works out of the box
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
web  = ["flask>=3.0", "rich>=13.0"]
all  = ["flask>=3.0", "rich>=13.0"]
dev  = [
  "rich>=13.0",
  "flask>=3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "build>=1.0",
]

[project.scripts]
omigrate = "open_migration.cli:main"

[project.urls]
Homepage      = "https://github.com/open-migration/open-migration"
Documentation = "https://open-migration.github.io/open-migration/"
Repository    = "https://github.com/open-migration/open-migration"
"Bug Tracker" = "https://github.com/open-migration/open-migration/issues"
Changelog     = "https://github.com/open-migration/open-migration/blob/main/CHANGELOG.md"
Demo          = "https://open-migration.github.io/open-migration/demo/"

[tool.setuptools.packages.find]
where   = ["."]
include = ["open_migration*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version       = "3.11"
strict               = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short -p no:warnings"

[tool.coverage.run]
source = ["open_migration"]
omit   = ["tests/*"]
